--- a/ui/index.html
+++ b/ui/index.html
@@ -11,24 +11,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Averia+Libre:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="Main">
         <img src="https://media.discordapp.net/attachments/863330049302462475/1149064559609512127/image.png" alt="Logo">
+        <h2 class="title">Welcome to <span id="servername"></span></h2>
         <div class="menu">
             <div id="opcion1"><img src="https://media.discordapp.net/attachments/979983535433736202/1153158551993323551/creator_code.png" alt="Creator"></div>
             <div id="opcion2"><img src="https://media.discordapp.net/attachments/979983535433736202/1153158552257581147/Initial_reward.png" alt="Initial"></div>
         </div>
 
         <div class="creator">
-            <h2>Enter your creator code</h2>
-            <div class="submenu">
-                <input type="text" id="input" placeholder="Creator Code">
-                <button id="btn2"><i class="fa fa-hand-pointer-o"></i></button>
+            <div class="crnorecibe">
+                <h2>Enter your creator code</h2>
+                <div class="submenu">
+                    <input type="text" id="input" placeholder="Creator Code">
+                    <button id="btn2"><i class="fa fa-hand-pointer-o"></i></button>
+                </div>
+            </div>
+            <div class="crisrecibe">
+                <h2>You have already registered a creator code</h2>
             </div>
             <button class="btn"><i class="fa fa-mail-reply"></i></button>
         </div>
@@ -38,8 +41,12 @@
                 <div class="norecibed">
                     <h2>Congratulations! you have received the welcome gift</h2>
                     <img src="https://icons.veryicon.com/png/o/miscellaneous/twotone/gift-196.png" alt="">
-                    <button class="btn3"><i class="fa fa-mail-reply"></i></button>
                 </div>
+                <div class="isrecibed">
+                    <h2>You have already claimed your initial reward</h2>
+                    <img src="https://icons.veryicon.com/png/o/miscellaneous/twotone/gift-196.png" alt="">
+                </div>
+                <button class="btn3"><i class="fa fa-mail-reply"></i></button>
             </div>
         </div>
     </div>
