--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,10 @@
     <script src="script.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <script defer src="https://app.embed.im/snow.js"></script> -->
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Averia+Libre:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Changa:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -18,8 +20,8 @@
         <img src="https://media.discordapp.net/attachments/863330049302462475/1149064559609512127/image.png" alt="Logo">
         <h2 class="title">Welcome to <span id="servername"></span></h2>
         <div class="menu">
-            <div id="opcion1"><img src="https://media.discordapp.net/attachments/979983535433736202/1153158551993323551/creator_code.png" alt="Creator"></div>
-            <div id="opcion2"><img src="https://media.discordapp.net/attachments/979983535433736202/1153158552257581147/Initial_reward.png" alt="Initial"></div>
+            <div id="opcion1">CREATOR CODE</div>
+            <div id="opcion2">INITIAL REWARD</div>
         </div>
 
         <div class="creator">
